@@ -98,6 +98,9 @@ Improvements
 * GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
   is now tagged. (Namgyu Kim)
 
+* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
+  #isIntersectingPolygon (Ignacio Vera)   
+
 Bug Fixes
 ---------------------
 * GITHUB#11726: Indexing term vectors on large documents could fail due to
